Todas as paginas agora estao localizadas para pt-BR e incluem estilo coerente

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -4,6 +4,7 @@ pt-BR:
       user:
         password: "Senha"
         password_confirmation: "Confirmação de senha"
+        confirmation_token: "Token de recuperação"
     model:
       user: "Usuário"
   helpers:
@@ -14,11 +15,23 @@ pt-BR:
         register: "Registrar"
         login: "Entrar"
         remember_me: "Permanecer conectado"
+  hello: "Olá, "
   login_button_title: "Entrar"
+  logout_button_title: "Sair"
   login_link_title: "Efetuar login"
   register_link_title: "Registrar"
-  forgot_link_title: "Esqueceu a senha?"
+  forgotten_password_link_title: "Esqueceu a senha?"
+  forgotten_password_button: "Enviar email de recuperação"
   confirmation_link_title: "Não recebeu email de confirmação?"
   password_confirmation_label: "Confirme a sua senha"
   minimum_characters: "Caractéres no mínimo"
   registration_form_title: "Formulário de Registro"
+  index_message: "Parabéns! Você acaba de se registrar!"
+  forgotten_password_email_message: "Alguém realizou um pedido de restauração de senha. Você pode clicar no link abaixo para gerar uma nova senha."
+  forgotten_password_email_button: "Criar nova senha"
+  unsolicited_email_disclaimer: "Se você não solicitou este email, por favor ignore-o."
+  modified_password_email_message: "Estamos enviando esta mensagem para avisar que a sua senha foi modificada"
+  confirmation_email_button: "Confirmar email"
+  confirmation_email_message: "Para realizar a confirmação do seu email, clique no botão abaixo"
+  resend_confirmation_title: "Reenviar email de confirmação"
+  resend_confirmation_button: "Enviar"
